--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
 
       /* Reduzindo um pouco a fonte do título do modal */
       .category-modal-title {
-        font-size: 1.15rem; /* Ajuste sutil para a frase dentro do modal */
+        font-size: 1.15rem;
       }
     </style>
   </head>
@@ -390,11 +390,7 @@
               stroke-linejoin="round"
               viewBox="0 0 24 24"
             >
-              <!--
-                Seta simples (um único path):
-                Faz um "V" deitado: M14 18 L8 12 L14 6
-              -->
-              <path d="M14 18l-6-6 6-6"/>
+              <path d="M14 18l-6-6 6-6" />
             </svg>
           </button>
 
